--- a/src/components/Side-Bar/Side.css
+++ b/src/components/Side-Bar/Side.css
@@ -1,6 +1,3 @@
 .main-side-bar{
-    border: '3px solid indianred';
-    padding:'20px 30px';
-    border-radius: 10px;
-    position: fixed;
+    background-color: darkorchid;
 }
